# ebs

./: .pre-commit-config.yaml  README.md
baseimage/: Dockerfile
bus/: rabbit.yaml
chassis/: __init__.py  event.py  logger.py  mq.py  pyproject.toml  topics.py
chassis/mq/: abstract_bus_connector.py  rabbit_bus_connector.py
datagen/: datagen.py  datagen.yaml  main.py  pyproject.toml
diagrams/: \  interaction.pu
distribution/: main.py  pyproject.toml
kustomka/base/: kustomization.yaml  tst.yaml
kustomka/base/configs/: queue.env
kustomka/base/datagen/: deployment.yaml  service.yaml
kustomka/base/distributor/: deployment.yaml
kustomka/base/processor/: deployment.yaml
kustomka/base/rabbit/: deployment.yaml  service.yaml
kustomka/base/statistics/: deployment.yaml
kustomka/hubbed/: kustomization.yaml
processor/: main.py  processor.py  pyproject.toml
services/: docker-compose.yaml
services/datagen/: Dockerfile  datagen.py  pyproject.toml  requirements.txt
services/distribution/: Dockerfile  config.json  distributor.py  pyproject.toml
services/processor/: Dockerfile  config.json  processor.py  pyproject.toml
services/processor/processor.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
services/statistics/: Dockerfile  pyproject.toml  statistics.py
statistics/: pyproject.toml
