[tool.poetry]
name = "processor"
version = "0.1.0"
description = ""
authors = ["intey <churin.d.r@sberbank.ru>"]

[tool.poetry.dependencies]
python = "^3.8"
rabbitmq = "^0.2.0"
fastapi = "^0.59.0"
pydantic = "^1.6.1"

[tool.poetry.dev-dependencies]
mypy = "^0.782"
pytest = "^5.4.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
